deploy/mysql-deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: database

---

apiVersion: v1
kind: Service
metadata:
  name: pokebattle-db
  namespace: database
  labels:
    app: pokebattle-db
spec:
  ports:
    - port: 3306
  selector:
    app: pokebattle-db
  clusterIP: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokebattle-db
  namespace: database
spec:
  selector:
    matchLabels:
      app: pokebattle-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pokebattle-db
    spec:
      containers:
        - image: mysql
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: database-persistent-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: database-persistent-volume
          persistentVolumeClaim:
            claimName: database-claim
---
