deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: pokebattle
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /pokebattle(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: pokedex-be
                port:
                  number: 8080
